# form-designer

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README  README.rst  biome.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  setuplib.py  tox.ini
.github/workflows/: tests.yml
docs/: Makefile  conf.py  index.rst  installation.rst
form_designer/: __init__.py  admin.py  apps.py  contents.py  default_field_types.py  default_settings.py  models.py  utils.py
form_designer/locale/ca/: django.mo  django.po
form_designer/locale/cs/LC_MESSAGES/: django.mo  django.po
form_designer/locale/de/LC_MESSAGES/: django.mo  django.po
form_designer/locale/es/LC_MESSAGES/: django.mo  django.po
form_designer/migrations/: 0001_initial.py  0002_auto_20180712_1729.py  0002_rename_name_formfield__old_name_and_more.py  0003_formfield_name_alter_formfield__old_name_and_more.py  0004_alter_formsubmission_options_and_more.py  0005_remove_form_config_json_form_config_and_more.py
form_designer/south_migrations/: 0001_initial.py
form_designer/static/form_designer/: admin.css
form_designer/templates/admin/form_designer/form/: change_form.html
form_designer/templates/admin/form_designer/formsubmission/: change_form.html
form_designer/templates/content/form/: form.html
tests/: cov.sh  requirements.txt  tox.ini
tests/testapp/: models.py  settings.py  settings_dev.py  test_forms.py  urls.py
tests/testapp/migrate/page/: 0001_initial.py
tests/testapp/templates/: base.html
tests/testapp/tests/: __init__.py  test_forms.py
