[metadata]
name = form_designer
version = attr: form_designer.__version__
description = Form Designer
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/feincms/form_designer/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = BSD-3-Clause
license_file = LICENSE
platforms = OS Independent
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development

[options]
packages = find:
install_requires =
    django-admin-ordering
    six
    xlsxdocument
include_package_data = True
zip_safe = False

[options.extras_require]
tests =
    FeinCMS
    django-mptt
    coverage

[options.packages.find]
exclude = tests

[flake8]
exclude = venv,build,docs,.tox,migrations,migrate
ignore = E203,W503
max-complexity = 10
max-line-length = 88

[isort]
profile = black
combine_as_imports = True
lines_after_imports = 2

[coverage:run]
branch = True
include =
    *form_designer*
omit =
    *migrations*
    *tests*
    *.tox*
