[metadata]
name = form-designer
version = attr: form_designer.__version__
description = Form Designer
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/feincms/form-designer/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = BSD-3-Clause
license_file = LICENSE
platforms = OS Independent
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development

[options]
packages = find:
install_requires =
    django-admin-ordering
    xlsxdocument
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
tests =
    FeinCMS
    coverage
    django-mptt
    django-recaptcha

[coverage:run]
branch = True
include =
    *form_designer*
omit =
    *migrations*
    *tests*
    *.tox*
